prep to publish

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/lodash.min.js"></script>
+	
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body class="">
 <div id="app">
